appointment current user implemented
